k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: policies-please
  namespace: policies-please
spec:
  selector:
    app: policies-please
  ports:
    - port: 80
      targetPort: 80
