k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policies-please
  namespace: policies-please
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: policies-please.milesflo.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: policies-please
                port:
                  number: 80
